--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,26 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate:hibernate-core:5.6.1.Final'
+	implementation 'org.hibernate:hibernate-entitymanager:5.6.1.Final'
+	implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0' // 오라클 JDBC 드라이버
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'
+
+
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// Oracle JDBC 설정
+configurations {
+	all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 }
