--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
+
 group = 'ore.website'
 version = '0.0.1-SNAPSHOT'
 
@@ -28,15 +29,20 @@ dependencies {
 	implementation 'org.hibernate:hibernate-core:5.6.1.Final'
 	implementation 'org.hibernate:hibernate-entitymanager:5.6.1.Final'
 	implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0' // 오라클 JDBC 드라이버
-
+	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'
+	implementation 'org.webjars:jquery:3.6.0'
+}
 
 
-
+bootJar {
+	// 로깅 설정 파일을 패키지에 포함시킴
+	from("src/main/resources") {
+		include "log4j2.xml"
+	}
 }
 
 tasks.named('test') {
