--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.webjars:jquery:3.6.0'
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 
